0030100: Modeling Algorithms - ShapeUpgrade_UnifySameDomain is unable to unify faces based on the same toroidal surface

When performing intersection of toroidal faces check first if they are based on the same surface.
Test cases for the issue.